新完成了园区管理员—个人中心的部分界面，包括一卡通，车位使用查看，出行权查看界面 完成了设置Setting主界面，自定义了防ios7风格的开关

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,28 +8,33 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
-
+        <activity android:name=".MainActivity" />
         <activity android:name=".SubmitDownActivity" />
-        <activity android:name=".business.admincompany.TestActivity" />
-        <activity android:name=".business.adminpark.TeatActivity" />
-        <activity android:name=".business.joincompany.ApplyJoinActivity"/>
-        <activity android:name=".business.joincompany.ChooseParkActivity" />
-        <activity android:name=".business.joincompany.ChooseCompanyActivity" />
-        <activity android:name=".business.pass.AuthorityActivity"/>
-        <activity android:name=".business.pass.ChooseDoorActivity"/>
-        <activity android:name=".business.visitor.ApplyInfoActivity">
+        <activity android:name=".usercenter.Setting.SettingActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
+        <activity android:name=".business.admincompany.TestActivity" />
+        <activity android:name=".business.adminpark.TeatActivity" />
+        <activity android:name=".business.joincompany.ApplyJoinActivity" />
+        <activity android:name=".business.joincompany.ChooseParkActivity" />
+        <activity android:name=".business.joincompany.ChooseCompanyActivity" />
+        <activity android:name=".business.pass.AuthorityActivity" />
+        <activity android:name=".business.pass.ChooseDoorActivity" />
+        <activity android:name=".business.visitor.ApplyInfoActivity"/>
         <activity android:name=".business.visitor.SecondApplyActivity" />
         <activity android:name=".business.monitor.MonitorInfoActivity" />
-        <activity android:name=".business.monitor.ChooseCompanyActivity"/>
+        <activity android:name=".business.monitor.ChooseCompanyActivity" />
         <activity android:name=".business.monitor.ChooseRoomActivity" />
-        <activity android:name=".business.monitor.ChooseCameraActivity"></activity>
+        <activity android:name=".business.monitor.ChooseCameraActivity" />
+        <activity android:name=".usercenter.adminpark.CardActivity" />
+        <activity android:name=".usercenter.adminpark.FixedCarActivity" />
+        <activity android:name=".usercenter.adminpark.UnfixedCarActivity" />
+
+        <activity android:name=".usercenter.adminpark.PassActivity"></activity>
     </application>
 
 </manifest>
