--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,7 @@ dependencies {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'me.iwf.photopicker:PhotoPicker:0.9.5@aar'
     compile 'com.android.support:recyclerview-v7:25.3.1'
 }
 dependencies {
