--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,19 +31,17 @@
         <activity android:name=".usercenter.adminpark.PassActivity" />
         <activity android:name=".usercenter.Setting.AboutActivity" />
         <activity android:name=".usercenter.Setting.HelpActivity" />
-        <activity android:name=".usercenter.Setting.FunctionActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".usercenter.Setting.FunctionActivity" />
+        <activity android:name=".business.adminpark.maintain.RepairInfoActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".business.adminpark.maintain.RepairInfoActivity" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
         <activity android:name=".business.adminpark.maintain.RepairDetailActivity" />
-
-        <activity android:name=".business.adminpark.maintain.RepairAccpetActivity" />
-        <activity android:name=".business.adminpark.maintain.RepairReasonsActivity" />
-        <activity android:name=".business.adminpark.maintain.RepairRefuseActivity"></activity>
+        <activity android:name=".business.adminpark.maintain.RepairReasonsActivity" >
+        </activity>
     </application>
 
 </manifest>
